# assistantx

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.gradient/: agent.yml
api/: main.py
api/agents/: __init__.py  inbound_guard.py  outbound_guard.py
api/models/: __init__.py
api/routers/: channels.py  checkin.py  consent.py  events.py  health.py  instances.py  onboard.py  proxy.py  workflows.py
api/services/: anomaly.py  audit_log.py  deadman.py  guard.py  instance_manager.py  secrets.py  token_vault.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
docker/: Dockerfile.openclaw  auth-profiles-empty.json  openclaw-seed.json
docs/: DEMO_SCRIPT.md  DEVPOST_SUBMISSION.md
eval/: dataset.json  report.md  results.json  run.py
scripts/: setup-openclaw.sh  start.sh
