[tool.poetry]
name = "assistantx"
version = "0.1.0"
description = "OpenClaw in total credential isolation — secured by Auth0 Token Vault"
authors = ["AssistantX"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
httpx = "^0.27.0"
websockets = "^13.0"
docker = "^7.0.0"
boto3 = "^1.35.0"
pydantic = "^2.9.0"
python-dotenv = "^1.0.0"
gradient = "^0.1.0"
gradient-adk = "^0.2.0"
scikit-learn = "^1.5.0"
numpy = "^1.26.0"
cryptography = "^43.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
